--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
-**/.aws-sam/
-**/.venv
-**/.DS_Store
+**/.aws-sam/**
+**/.venv/**
+**/.DS_Store/**
+.venv/
 
 # Created by https://www.gitignore.io/api/osx,linux,python,windows,pycharm,visualstudiocode
 
