--- a/k8s/instastories-api-deployment.yaml
+++ b/k8s/instastories-api-deployment.yaml
@@ -12,20 +12,32 @@ spec:
       port: 5000
 ---
 apiVersion: v1
+kind: PersistentVolume
+metadata:
+  name: instastories-api-pv
+spec:
+  capacity:
+    storage: 512Mi
+  volumeMode: Filesystem
+  accessModes:
+  - ReadWriteOnce
+  persistentVolumeReclaimPolicy: Retain
+  storageClassName: local-storage
+  hostPath:
+    path: /mnt/disks/kubernetes/instastories/api-data
+---
+apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: instastories-api-pv-claim
+  name: instastories-api-pvc
   namespace: instastories-namespace
-  labels:
-    app: instastories
 spec:
-  storageClassName: instastories-storage
-  volumeName: instastories-api-pv
+  storageClassName: local-storage
   accessModes:
     - ReadWriteOnce
   resources:
     requests:
-      storage: 5Gi
+      storage: 512Mi
 ---
 apiVersion: apps/v1
 kind: Deployment
@@ -51,11 +63,11 @@ spec:
         image: hpfpv/instastories-api:latest
         resources:
           limits:
-            memory: 512Mi
-            cpu: "1"
-          requests:
             memory: 256Mi
             cpu: "0.5"
+          requests:
+            memory: 128Mi
+            cpu: "0.2"
         env:
         - name: MONGO_USER
           valueFrom: 
@@ -80,6 +92,6 @@ spec:
       volumes:
         - name: instastories-api-data
           persistentVolumeClaim:
-            claimName: instastories-api-pv-claim
+            claimName: instastories-api-pvc
         
         
