--- a/k8s/instastories-api-deployment-arm64.yaml
+++ b/k8s/instastories-api-deployment-arm64.yaml
@@ -1,23 +1,23 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: instastories-mongo-service
+  name: instastories-api-service
   namespace: instastories-namespace
   labels:
     app: instastories
-    tier: mongo
+    tier: backend
 spec:
   selector:
     app: instastories
-    tier: mongo
+    tier: backend
   ports:
     - protocol: TCP
-      port: 27017
+      port: 5000
 ---
 apiVersion: v1
 kind: PersistentVolume
 metadata:
-  name: instastories-mongo-pv
+  name: instastories-api-pv
 spec:
   capacity:
     storage: 512Mi
@@ -27,12 +27,12 @@ spec:
   persistentVolumeReclaimPolicy: Retain
   storageClassName: local-storage
   hostPath:
-    path: /mnt/disks/kubernetes/instastories/mongo-data
+    path: /mnt/disks/kubernetes/instastories/api-data
 ---
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: instastories-mongo-pvc
+  name: instastories-api-pvc
   namespace: instastories-namespace
 spec:
   storageClassName: local-storage
@@ -45,51 +45,57 @@ spec:
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: instastories-mongo-deployment
+  name: instastories-api-deployment
   namespace: instastories-namespace
   labels:
     app: instastories
-    tier: mongo
+    tier: backend
 spec:
   replicas: 1
   selector:
     matchLabels:
       app: instastories
-      tier: mongo
+      tier: backend
   template:
     metadata:
       labels:
         app: instastories
-        tier: mongo
+        tier: backend
     spec:
       containers:
-      - name: mongodb
-        image: mongo:latest
+      - name: instastories
+        image: hpfpv/instastories-api:arm64-latest
         resources:
           limits:
-            memory: 512Mi
-            cpu: "1"
+            memory: 256Mi
+            cpu: "0.5"
           requests:
-            memory: 512Mi
-            cpu: "1"
+            memory: 256Mi
+            cpu: "0.5"
         env:
-        - name: MONGO_INITDB_ROOT_USERNAME
+        - name: MONGO_USER
           valueFrom: 
             secretKeyRef:
               name: instastories-mongo-secret
               key: mongo-user
-        - name: MONGO_INITDB_ROOT_PASSWORD
+        - name: MONGO_PWD
           valueFrom: 
             secretKeyRef:
               name: instastories-mongo-secret
               key: mongo-password
+        - name: MONGO_URL
+          valueFrom: 
+            configMapKeyRef:
+              name: instastories-mongo-config
+              key: mongo-url
         ports:
-        - containerPort: 27017
+        - containerPort: 5000
         volumeMounts:
-        - name: instastories-mongo-data
-          mountPath: /data/db
+        - name: instastories-api-data
+          mountPath: /app/data
       volumes:
-      - name: instastories-mongo-data
-        persistentVolumeClaim:
-          claimName: instastories-mongo-pvc
-
+        - name: instastories-api-data
+          persistentVolumeClaim:
+            claimName: instastories-api-pvc
+        
+        
