exposing api endpoint to web js file

--- a/k8s/instastories-web-deployment.yaml
+++ b/k8s/instastories-web-deployment.yaml
@@ -48,6 +48,8 @@ spec:
             configMapKeyRef:
               name: instastories-api-config
               key: api-endpoint
+        command: ["/bin/sh"]
+        args: ["-c", "echo $(API_ENDPOINT) > /usr/local/apache2/htdocs/js/config"]
         ports:
         - containerPort: 80
         
