--- a/k8s/instastories-config.yaml
+++ b/k8s/instastories-config.yaml
@@ -22,4 +22,5 @@ metadata:
   name: instastories-api-config
   namespace: instastories-namespace
 data:
-  api-endpoint: instastories-api-service
+  config: |
+    instastories-api-service
