--- a/k8s/instastories-api-deployment-amd64.yaml
+++ b/k8s/instastories-api-deployment-amd64.yaml
@@ -7,12 +7,14 @@ metadata:
     app: instastories
     tier: backend
 spec:
+  type: NodePort
   selector:
     app: instastories
     tier: backend
   ports:
     - protocol: TCP
       port: 5000
+      nodePort: 31567
 ---
 apiVersion: v1
 kind: PersistentVolume
@@ -63,7 +65,7 @@ spec:
         tier: backend
     spec:
       containers:
-      - name: instastorie-api
+      - name: instastories-api
         image: hpfpv/instastories-api:amd64-latest
         resources:
           limits:
