--- a/k8s/instastories-web-deployment.yaml
+++ b/k8s/instastories-web-deployment.yaml
@@ -11,7 +11,7 @@ spec:
   ports:
     - protocol: TCP
       port: 80
-      #targetPort: 80
+      nodePort: 31568
 ---
 apiVersion: apps/v1
 kind: Deployment
@@ -21,7 +21,7 @@ metadata:
   labels:
     app: instastories
 spec:
-  replicas: 1
+  replicas: 2
   selector:
     matchLabels:
       app: instastories
