--- a/k8s/instastories-api-deployment-amd64.yaml
+++ b/k8s/instastories-api-deployment-amd64.yaml
@@ -7,14 +7,34 @@ metadata:
     app: instastories
     tier: backend
 spec:
-  type: NodePort
+  type: LoadBalancer
   selector:
     app: instastories
     tier: backend
   ports:
     - protocol: TCP
       port: 5000
-      nodePort: 31567
+      targetPort: 5000
+---
+apiVersion: networking.k8s.io/v1
+kind: Ingress
+metadata: 
+  name: instastories-api-ingress
+  annotations:
+    nginx.ingress.kubernetes.io/rewrite-target: /
+  namespace: instastories-namespace
+spec:
+  rules:
+  - host: instascraper-api.127.0.0.1.nip.io
+    http:
+      paths:
+      - path: /
+        pathType: Prefix
+        backend: 
+          service: 
+            name: instastories-api-service
+            port:
+              number: 5000
 ---
 apiVersion: v1
 kind: PersistentVolume
@@ -58,15 +78,25 @@ spec:
     matchLabels:
       app: instastories
       tier: backend
+  strategy:
+    rollingUpdate:
+      maxSurge: 25%
+      maxUnavailable: 25%
+    type: RollingUpdate
   template:
     metadata:
+      creationTimestamp: null
       labels:
         app: instastories
         tier: backend
     spec:
       containers:
       - name: instastories-api
+        imagePullPolicy: Always
+        terminationMessagePath: /dev/termination-log
+        terminationMessagePolicy: File
         image: hpfpv/instastories-api:amd64-latest
+        securityContext: {}
         resources:
           limits:
             memory: 256Mi
