support for tls on k8s minikube

--- a/k8s/instastories-api-deployment-arm64.yaml
+++ b/k8s/instastories-api-deployment-arm64.yaml
@@ -25,7 +25,7 @@ metadata:
   namespace: instastories-namespace
 spec:
   rules:
-  - host: instascraper-api.127.0.0.1.nip.io
+  - host: instastories-api.127.0.0.1.nip.io
     http:
       paths:
       - path: /
