--- a/k8s/instastories-web-deployment.yaml
+++ b/k8s/instastories-web-deployment.yaml
@@ -4,7 +4,7 @@ metadata:
   name: instastories-web-service
   namespace: instastories-namespace
 spec:
-  type: LoadBalancer
+  type: NodePort
   selector:
     app: instastories
     tier: frontend
@@ -22,11 +22,11 @@ metadata:
   namespace: instastories-namespace
 spec:
   tls:
-    - secretName: 127-0-0-1-nip-io-tls
+    - secretName: 192-168-64-24-nip-io-tls
       hosts:
-        - '*.127.0.0.1.nip.io'
+        - '*.192.168.64.24.nip.io'
   rules:
-  - host: instastories.127.0.0.1.nip.io
+  - host: instastories.192.168.64.24.nip.io
     http:
       paths:
       - path: /
