--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -46,9 +46,10 @@ pipeline {
 	    stage('Deploy to K8s') {
         when {
             anyOf{
-                changeset "frontend/web/**"
-                changeset "backend/app/**"
+                changeset "frontend/**"
+                changeset "backend/**"
                 changeset "k8s/*.yaml"
+                changeset "jenkins/**"
             }
         }
     		steps {
